--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -11,3 +11,7 @@ use_case.R
 ^\.github$
 vignettes/use_case.Rmd
 vignettes/download_full_subject_data.Rmd
+^DESCRIPTION\.bak$
+^autoci\.yml$
+^autoci_pkgdown\.yml$
+^tic\.R$
