--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,22 +1,20 @@
 Package: Rxnat
 Type: Package
 Version: 1.0.15
-Title: Queries and Extracts Images from Extensible Neuroimaging Archive Toolkit Public/Private Datasets
-Description: Allows communication with Extensible Neuroimaging Archive Toolkit <https://www.xnat.org>. 
-  'Rxnat' is using the 'XNAT' REST API to perform data queries and download images.
+Title: Queries and Extracts Images from Extensible Neuroimaging Archive
+        Toolkit Public/Private Datasets
+Description: Allows communication with Extensible Neuroimaging Archive
+        Toolkit <https://www.xnat.org>. 'Rxnat' is using the 'XNAT'
+        REST API to perform data queries and download images.
 Authors@R: person("Adi", "Gherman", ,"adig@jhu.edu", c("aut", "cre"))
 Maintainer: Adi Gherman <adig@jhu.edu>
 Imports: RCurl, httr, utils, tibble
-Suggests: 
-    testthat,
-    knitr,
-    rmarkdown,
-    covr,
-    scales,
-    devtools
+Suggests: testthat, knitr, rmarkdown, covr, scales, devtools
 License: GPL-2
 Encoding: UTF-8
 ByteCompile: true
 RoxygenNote: 7.1.2
 VignetteBuilder: knitr
 BugReports: https://github.com/adigherman/Rxnat/issues
+Repository: Neuroconductor
+biocViews: 
